--- a/scss/fireworks.scss
+++ b/scss/fireworks.scss
@@ -75,6 +75,15 @@ $box-shadow2: ();
   -ms-transform: $settings;
 }
 
+.fireworks {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
 .fireworks > .before, .fireworks > .after {
   position: absolute;
   width: 5px;
@@ -104,23 +113,23 @@ $box-shadow2: ();
     
 @include keyframes(position) {
   0%, 19.9% {
-    margin-top: 15%;
-    margin-left: 40%;
+    top: 15%;
+    left: 40%;
   }
   20%, 39.9% {
-    margin-top: 15%;
-    margin-left: 30%;
+    top: 15%;
+    left: 30%;
   }
   40%, 59.9% {  
-    margin-top: 15%;
-    margin-left: 70%
+    top: 15%;
+    left: 70%
   }
   60%, 79.9% {  
-    margin-top: 15%;
-    margin-left: 20%;
+    top: 15%;
+    left: 20%;
   }
   80%, 99.9% {  
-    margin-top: 15%;
-    margin-left: 80%;
+    top: 15%;
+    left: 80%;
   }
 }
