--- a/scss/fireworks.scss
+++ b/scss/fireworks.scss
@@ -75,61 +75,67 @@ $box-shadow2: ();
   -ms-transform: $settings;
 }
 
-.fireworks {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
+@if $enable-fireworks == "true" {
+  .fireworks {
+    @if $enable-fireworks-follow-screen == "true" {
+      position: fixed;
+    } @else {
+      position: absolute;
+    }
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
 
-.fireworks > .before, .fireworks > .after {
-  position: absolute;
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  box-shadow: $box-shadow2;
-  @include animation((3s bang ease-out infinite backwards, 3s gravity ease-in infinite backwards, 10s position linear infinite backwards));
-}
+  .fireworks > .before, .fireworks > .after {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    box-shadow: $box-shadow2;
+    @include animation((3s bang ease-out infinite backwards, 3s gravity ease-in infinite backwards, 10s position linear infinite backwards));
+  }
     
-.fireworks > .after {
-  @include animation-delay((1.25s, 1.25s, 1.25s));
-  @include animation-duration((1.25s, 1.25s, 6.25s));
-}
+  .fireworks > .after {
+    @include animation-delay((1.25s, 1.25s, 1.25s));
+    @include animation-duration((1.25s, 1.25s, 6.25s));
+  }
         
-@include keyframes(bang) {
-  to {
-    box-shadow:$box-shadow;
+  @include keyframes(bang) {
+    to {
+      box-shadow:$box-shadow;
+    }
   }
-}
     
-@include keyframes(gravity)  {
-  to {
-    @include transform(translateY(200px));
-    opacity: 0;
+  @include keyframes(gravity)  {
+    to {
+      @include transform(translateY(200px));
+      opacity: 0;
+    }
   }
-}
     
-@include keyframes(position) {
-  0%, 19.9% {
-    top: 15%;
-    left: 40%;
-  }
-  20%, 39.9% {
-    top: 15%;
-    left: 30%;
-  }
-  40%, 59.9% {  
-    top: 15%;
-    left: 70%
-  }
-  60%, 79.9% {  
-    top: 15%;
-    left: 20%;
-  }
-  80%, 99.9% {  
-    top: 15%;
-    left: 80%;
+  @include keyframes(position) {
+    0%, 19.9% {
+      top: 15%;
+      left: 40%;
+    }
+    20%, 39.9% {
+      top: 15%;
+      left: 30%;
+    }
+    40%, 59.9% {  
+      top: 15%;
+      left: 70%
+    }
+    60%, 79.9% {  
+      top: 15%;
+      left: 20%;
+    }
+    80%, 99.9% {  
+      top: 15%;
+      left: 80%;
+    }
   }
 }
