--- a/scss/lights.scss
+++ b/scss/lights.scss
@@ -44,10 +44,18 @@
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
-    position: absolute;
+
+    @if $sticky_lights {
+      position: fixed;
+      top: 0;
+      margin: 0;
+    } @else {
+      position: absolute;
+      margin: -40px 0 0 0;
+    }
+
     left: 0;
     z-index: 1;
-    margin: -40px 0 0 0;
     padding: 0;
     pointer-events: none;
     width: 100%;
