--- a/scss/lights.scss
+++ b/scss/lights.scss
@@ -45,8 +45,14 @@
     white-space: nowrap;
     overflow: hidden;
     position: absolute;
-    left: 0;
     z-index: 1;
+    @if $enable-lights-sticky == "true" {
+      position: fixed;
+      top: 0;
+      z-index: 1000;
+    }
+    left: 0;
+
     margin: -40px 0 0 0;
     padding: 0;
     pointer-events: none;
