--- a/scss/lights.scss
+++ b/scss/lights.scss
@@ -56,8 +56,8 @@
       @if $enable-lights-sticky == "true" {
         display: block;
         position: fixed;
-        top: 0;
-        z-index: 1000;
+        top: 7px;
+        z-index: 9999;
       }
     }
     
