--- a/scss/lights.scss
+++ b/scss/lights.scss
@@ -56,8 +56,9 @@
       @if $enable-lights-sticky == "true" {
         display: block;
         position: fixed;
-        top: 7px;
+        top: 13px;
         z-index: 9999;
+        scale: 17%;
       }
     }
     
